--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Hex Root</title>
+    <title>Scramble Bramble</title>
     <script src="src/gen/imageManifest.js"></script>
     <script src="src/Util.js"></script>
     <script src="src/main.js"></script>
