--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <script src="src/PlayScene.js"></script>
     <script src="src/TitleScene.js"></script>
+    <script src="src/ScoreScreen.js"></script>
     <style>
       body { margin: 0; background-color: #333; }
       #screen { width: 100%; height: 100%; }
