Tweak mecahnics a bit for funness, add a score display.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
     <title>Scramble Bramble</title>
     <script src="src/gen/imageManifest.js"></script>
     <script src="src/Util.js"></script>
+    <script src="src/knobs.js"></script>
     <script src="src/main.js"></script>
     <script src="src/gfx.js"></script>
 
