--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
     <title>Scramble Bramble</title>
     <script src="src/gen/imageManifest.js"></script>
-    <script src="src/Util.js"></script>
+    <script src="src/util.js"></script>
     <script src="src/knobs.js"></script>
     <script src="src/main.js"></script>
     <script src="src/gfx.js"></script>
